--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background; http://cdn.wallpapersafari.com/96/4/V4LJXF.jpeg;
+	background: url("http://cdn.wallpapersafari.com/96/4/V4LJXF.jpeg");
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
