--- a/style.scss
+++ b/style.scss
@@ -202,7 +202,7 @@ img {
 
 .site-description {
   margin: -5px 0 0 0;
-  color: $white
+  color: $white;
   font-size: 16px;
 
   @include mobile {
