--- a/style.scss
+++ b/style.scss
@@ -254,9 +254,9 @@ nav {
 .post {
   blockquote {
     margin: 1.8em .8em;
-    border-left: 2px solid $white
+    border-left: 2px solid $white;
     padding: 0.1em 1em;
-    color: $white
+    color: $white;
     font-size: 22px;
     font-style: italic;
   }
