--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,7 @@ html {
 
 body {
 	background: url("http://cdn.wallpapersafari.com/96/4/V4LJXF.jpeg");
+	background-repeat: no-repeat
   font: 18px/1.4 $helvetica;
   color: $white;
 }
