--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,3 +49,17 @@
     {% include analytics.html %}
   </body>
 </html>
+
+<nav>
+  <div class="dropdown"> 
+    <button class="dropbtn">My Blog</button>
+    <div class="dropdown-content">     
+      <li><a href="https://tud86.github.io/lesson-2/">Lesson 2</a></li>
+      <li><a href="https://tud86.github.io/monaco-gp/">Monaco GP</a></li>     
+      <li><a href="https://tud86.github.io/a-new-blog/">A New Blog</a></li>
+      <li><a href="https://tud86.github.io/school-of-rock/">School of Rock</a> </li>      
+      <li><a href="https://tud86.github.io/the-olympic-park/">The Olympic Park</a></li>
+      <li><a href="https://tud86.github.io/the-moon/">The Moon</a></li>
+    </div>
+   </div>
+</nav>
