--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
 
 <nav>
   <div class="dropdown"> 
-    <button class="dropbtn">My Blog</button>
+    <button class="dropbtn">Blog</button>
     <div class="dropdown-content">     
       <li><a href="https://tud86.github.io/lesson-2/">Lesson 2</a></li>
       <li><a href="https://tud86.github.io/monaco-gp/">Monaco GP</a></li>     
