--- a/style.scss
+++ b/style.scss
@@ -307,7 +307,7 @@ footer {
     display: none;
     position: absolute;
     min-width: 180px;
-    background-color: #f9f9f9;
+    background-color: #FF0066;
     list-style-type: none;
     text-align: right;
 }
@@ -323,7 +323,7 @@ footer {
 }
 
 
-.dropdown-content a:hover {background-color:#CCCCFF;
+.dropdown-content a:hover {background-color:#FF0066;
 }
 
 .dropdown:hover .dropdown-content {
@@ -332,7 +332,7 @@ footer {
 
 
 .dropdown:hover .dropbtn {
-    background-color: #996600;
+    background-color: #FF0066;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
