--- a/style.scss
+++ b/style.scss
@@ -70,11 +70,11 @@ p {
 }
 
 a {
-  color: $ff0066;
+  color: $FF0066;
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
-    color: $ff0066;
+    color: $FF0066;
   }
 }
 
