--- a/style.scss
+++ b/style.scss
@@ -332,7 +332,7 @@ footer {
 
 
 .dropdown:hover .dropbtn {
-    background-color: #FF0066;
+    background-color: $white;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
