--- a/style.scss
+++ b/style.scss
@@ -298,6 +298,8 @@ footer {
 
 .dropdown {
     position: relative;
+    left: 30px;
+    border: 3px solid #73AD21;
     display: inline-block;   
     right: 0px;
 }
