--- a/style.scss
+++ b/style.scss
@@ -298,8 +298,6 @@ footer {
 
 .dropdown {
     position: relative;
-    left: 30px;
-    border: 3px solid #73AD21;
     display: inline-block;   
     right: 0px;
 }
@@ -309,7 +307,7 @@ footer {
     display: none;
     position: absolute;
     min-width: 180px;
-    background-color: #FF0066;
+    background-color: #f9f9f9;
     list-style-type: none;
     text-align: right;
 }
@@ -325,7 +323,7 @@ footer {
 }
 
 
-.dropdown-content a:hover {background-color:#FF0066;
+.dropdown-content a:hover {background-color:#CCCCFF;
 }
 
 .dropdown:hover .dropdown-content {
@@ -334,7 +332,7 @@ footer {
 
 
 .dropdown:hover .dropbtn {
-    background-color: $white;
+    background-color: #996600;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
