--- a/style.scss
+++ b/style.scss
@@ -284,55 +284,49 @@ footer {
   text-align: center;
 }
 
-<style>
-.dropbtn {
-    background-color: #4CAF50;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
     color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
-    display: block;
+}
+<ul>
+  <li><a href="https://tud86.github.io/a-new-blog/">A New Blog</a></li>
+  <li><a href="https://tud86.github.io/lesson-2/">Lesson 2</a></li> 
+</ul>
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-    display: block;
+li a:hover {
+    background-color: #111;
 }
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+.active {
+    background-color: #FF0066;
 }
-</style>
+li {
+    border-right: 1px solid #bbb;
+}
 
-<div class="dropdown">
-  <button class="dropbtn">Dropdown</button>
-  <div class="dropdown-content">
-    <a href="https://tud86.github.io/a-new-blog/">A New Blog</a>
-    <a href="https://tud86.github.io/lesson-2/">Lesson 2</a>
-  </div>
-</div>
-
+li:last-child {
+    border-right: none;
+}
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
