--- a/style.scss
+++ b/style.scss
@@ -304,9 +304,10 @@ li a {
     text-decoration: none;
 }
 <ul>
-  <li><a href="https://tud86.github.io/a-new-blog/">A New Blog</a></li>;
-  <li><a href="https://tud86.github.io/lesson-2/">Lesson 2</a></li>;
+  <li><a href="https://tud86.github.io/a-new-blog/">A New Blog</a></li>
+  <li><a href="https://tud86.github.io/lesson-2/">Lesson 2</a></li>
 </ul>
+}
 
 ul {
     list-style-type: none;
