--- a/style.scss
+++ b/style.scss
@@ -304,8 +304,8 @@ li a {
     text-decoration: none;
 }
 <ul>
-  <li><a href="https://tud86.github.io/a-new-blog/">A New Blog</a></li>
-  <li><a href="https://tud86.github.io/lesson-2/">Lesson 2</a></li>
+  <li><a href="https://tud86.github.io/a-new-blog/">A New Blog</a></li>;
+  <li><a href="https://tud86.github.io/lesson-2/">Lesson 2</a></li>;
 </ul>
 }
 
